# EmbeddedProjects

./: .gitignore  Makefile  Readme.md  blink.c  morsecode.c  temperature.c
AdruinoCode/sketch_feb18a/: sketch_feb18a.ino
AdruinoCode/temperature_reading_ino_copy_20250220140702/: temperature_reading_ino_copy_20250220140702.ino
Common/: helpers.c  helpers.h  i2c.c  i2c.h  lcd.c  lcd.h  serial.c  serial.h  uart.c
Documentation/: readme.md
Documentation/Arduino/: common.tex
Documentation/atmega328p/: common.tex
I2CMenueBasedSystem/: Makefile  Readme.md  project.c
TestPrograms/: morsecode.c
arduino/: project.yml
arduino/src/Common/: adc.h  lcd.h
arduino/src/I2CMenueBasedSystem/: Readme.md
arduino/test/Common/: Makefile  test_lcd.c
arduino_stm32/: ceedlingcommands.md  project.yml
arduino_stm32/Documentation/: ceedlingcommands.md
arduino_stm32/src/Common/: adc.c  uart.h
arduino_stm32/src/I2CMenueBasedSystem/: project.c
arduino_stm32/test/Common/: test_adc.c  test_i2c.c  test_lcd.c  test_uart.c
atmega328p/src/I2CMenueBasedSystem/: Makefile  project.c  project.elf  project.hex
atmega328p/src/drivers/: lcd.c  uart.c  uart.h
atmega328p/test/Common/: Makefile  test_adc.c  test_i2c.c  test_uart.c
esp32/src/common/: wifi.c  wifi.h
esp32/src/httpserver/: CMakeLists.txt  readme.md  sdkconfig
esp32/src/httpserver/main/: CMakeLists.txt  main.c  utils.c  utils.h  (+2 more)
esp32/src/ota/: CMakeLists.txt  buildandsetup.md
esp32/src/ota/main/: CMakeLists.txt  ota.c
stm32/src/ArmEducation/: lcd.cpp  main.cpp  temp_on_lcd.cpp  temp_sensor.cpp  uart.cpp
(+1 files in other folders)
